--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -52,6 +52,20 @@ align-items: center;
 justify-content: space-between;
 }
 
+li>div{
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+li>div>button, li>div>input, li>div>label{
+  margin-left: 12px;
+  margin-top: 6px;
+  margin-bottom: 6px;
+  }
+
 input[type="radio"] {
   opacity: 0;
   position: fixed;
