Added the header

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -899,7 +899,7 @@ background-color: var(--accent-color 80%);
   transition: .4s;
 }
 
-header.settings{
+div.messages{
 all: initial;
 position: fixed;
 right: 0;
