--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -992,6 +992,10 @@ input:checked + .slider:before {
   animation: gradient-animation 18s ease infinite;
 }
 
+li>p{
+  text-align: left;
+}
+
 /*Keyframes for the animation*/
 @keyframes gradient-animation {
   0% {
