--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -19,9 +19,8 @@ html {
 
 :root {
   --accent-color: 113, 10, 151; /* Initial value */
+  --darker-accent-color: 18, 2, 24; /* Initial value */
 }
-
-
 
 /*Scales down emojis*/
 img.emoji{
@@ -203,8 +202,10 @@ div.langWrapper{
   font-family: Jost, sans-serif;
   background-color: #120218;
   background-color: #12021880;
+  background-color: rgba(var(--darker-accent-color), 0.50);
   border: #120218 2px solid;
   border: #12021880 2px solid;
+  border: rgba(var(--darker-accent-color), 0.50) 2px solid;
   padding: 12px;
   text-decoration: none;
   width: -moz-fit-content;
@@ -733,10 +734,10 @@ list-style-type: none;
   background-color: #120218;
   background-color: #12021880;
   background-color: 12021880;
-  background-color: rgba(var(--accent-color), 0.50);
+  background-color: rgba(var(--darker-accent-color), 0.50);
   border: #120218 2px solid;
   border: #12021880 2px solid;
-  border: rgba(var(--accent-color), 0.50) 2px solid;
+  border: rgba(var(--darker-accent-color), 0.50) 2px solid;
   padding: 8px;
   text-decoration: none;
   width: -moz-fit-content;
