--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -204,9 +204,6 @@ div.langWrapper{
   background-color: #120218;
   background-color: #12021880;
   background-color: rgba(var(--darker-accent-color), 0.50);
-  border: #120218 2px solid;
-  border: #12021880 2px solid;
-  border: rgba(var(--darker-accent-color), 0.50) 2px solid;
   padding: 12px;
   text-decoration: none;
   width: -moz-fit-content;
@@ -743,9 +740,7 @@ list-style-type: none;
   background-color: #12021880;
   background-color: 12021880;
   background-color: rgba(var(--darker-accent-color), 0.50);
-  border: #120218 2px solid;
-  border: #12021880 2px solid;
-  border: rgba(var(--darker-accent-color), 0.50) 2px solid;
+  border: none;
   padding: 8px;
   text-decoration: none;
   width: -moz-fit-content;
@@ -771,6 +766,15 @@ border: unset;
 font-weight: normal;
   width: 100%;
 }
+
+.button:hover{
+  background-color: rgba(var(--darker-accent-color));
+  }
+
+  .saveButton:hover{
+    background-color: rgba(var(--darker-accent-color));
+    }
+  
 
 input[type="radio"]:checked + label {
 background-color: #14031a;
