--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -512,6 +512,7 @@ div.socialMedias{
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
+  background-color: black; /* Fallback color */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.65); /* Black w/ opacity */
   -webkit-backdrop-filter: blur(20px); 
