--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -119,7 +119,19 @@ div.education, div.work{
   padding-top: 12px;
 }
 
+#wrapperProjects{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+  flex-wrap: wrap;
+}
+
 div.project{
+  display: flex;
+  flex-direction: column;
+  max-width: 80vw;
   background-color: #120218;
   background-color: rgba(18, 2, 24, 0.7);
   background-color: rgba(var(--darker-accent-color), 0.7);
@@ -127,17 +139,13 @@ div.project{
   margin: 12px;
   border-radius: 12px;
   text-align: left;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: center;
-  align-self: center;
 }
 
 div.project>p{
   text-align: left;
   margin: 12px;
   color: rgb(188, 188, 188);
+  white-space: wrap;
 }
 
 div.project>div{
@@ -153,13 +161,14 @@ div.project>div{
   padding: 8px;
   margin: 8px;
   border-radius: 12px;
+  max-width: 60%;
 }
 
 div.project>div>p{
   text-align: center;
   margin: 12px;
   color: rgb(188, 188, 188);
-  white-space: nowrap;
+  white-space: wrap;
   text-decoration: none;
 }
 
