--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -772,8 +772,7 @@ font-weight: normal;
 
 input[type="radio"]:checked + label {
 background-color: #080808;
-background-color: #08080880;
-border: #08080880 2px solid;
+border: #080808 2px solid;
 }
 
 .red{
