added stuff to the minecraft page

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1218,6 +1218,42 @@ div#loading>div{
   font-family: Pixel, Jost, sans-serif;
 }
 
+#wrapperMc{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#mcJoinButtons{
+  width: 85vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.imgWorld{
+  aspect-ratio: 16 / 9; /* typical video aspect ratio */
+  width: 85vw;
+}
+
+button.mcMenu{
+  text-transform: uppercase;
+  flex: 1; /* Buttons will share the available space equally */
+  margin: 0; /* Remove default margin for better spacing */
+  padding: 10px; /* Add some padding for visual separation (optional) */
+  border-radius: 0;
+}
+.hide{
+  display: none;
+}
+.mcShow{
+  display: block;
+}
+
+
 @keyframes lds-ring {
   0% {
     transform: rotate(0deg);
