--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1249,6 +1249,8 @@ div#loading>div{
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  position: relative;
+
 }
 
 
@@ -1294,6 +1296,27 @@ div.centererWrapper{
   justify-content: center;
   align-items: center;
 }
+
+.img-holder{
+  background-image: url(../images/world.png);
+  background-size: contain;
+  aspect-ratio: 16 / 9;
+  width: 85vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.img-holder>p{
+  margin: 12px;
+}
+.img-holder>a{
+  padding: 6px;
+  background-color: rgba(var(--darker-accent-color), 0.30);
+}
+
+
 
 @keyframes lds-ring {
   0% {
