--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1222,11 +1222,12 @@ div#discord{
 }
 
 #activityLogoSmall {
-  border-radius: 50%;
+  border-radius: 25%;
   width: 32px;
   height: 32px;
   position: absolute;
   transform: translate(-200%, 250%);
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
 }
 
 #discordName>p{
