General bug fix
Fixed issue causing the divider to not change color

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -27,7 +27,7 @@ html {
 }
 
 .divider {
-  color: rgba(var(--accent-color), 0.4);
+  border: solid 1px rgba(var(--accent-color), 0.4)
 }
 
 :root {
