Added toggle, improved CSS
Added toggle for updating the activity every second. Made settings labels less bright, so there's a clear difference between category and setting.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1380,6 +1380,10 @@ div.centererWrapper{
   text-align: left;
 }
 
+label, li>p {
+  color: rgb(203, 203, 203);
+}
+
 
 @keyframes lds-ring {
   0% {
